# McpApiBoilerplate

./: CHANGELOG.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
src/mcpapiboilerplate/api/: main.py
src/mcpapiboilerplate/api/models/: __init__.py
src/mcpapiboilerplate/api/routes/: health.py
src/mcpapiboilerplate/mcp/: server.py
src/mcpapiboilerplate/mcp/tools/: example.py
tests/: __init__.py  conftest.py
tests/test_api/: test_health.py
tests/test_mcp/: __init__.py  test_tools.py
